# missioncontrol

./: install_script.sh  installation tutorial
src/basic_sonar/: CMakeLists.txt  package.xml
src/basic_sonar/include/basic_sonar/: basic_sonar.h
src/basic_sonar/launch/: buoyancy.conf  test_launch_file.launch
src/basic_sonar/src/: basic_sonar.cpp
src/basic_sonar/srv/: sonar_image_serv.srv  sonar_serv.srv
src/basic_sonar/world/: simple_test.world
src/freefloating_gazebo/: CMakeLists.txt  package.xml
src/freefloating_gazebo/include/freefloating_gazebo/: freefloating_gazebo_fluid.h
src/freefloating_gazebo/msg/: fluid_objects_params.msg
src/freefloating_gazebo/src/: freefloating_gazebo_fluid.cpp
src/freefloating_gazebo_demo/: CMakeLists.txt  package.xml
src/freefloating_gazebo_demo/launch/: 3_bluefin_launch_file.launch  g500arm5e_spawner.launch  launching_shell.sh  main_launch_file.launch  object_spawner.launch  test_launch_file.launch  underwater_operating_script.sh
src/freefloating_gazebo_demo/scenes/: g500arm5e_bbox.xml
src/freefloating_gazebo_demo/scripts/: 3_bluefin_main_script.sh  engine_forces_test  engine_forces_test~  main_script.sh  movement_script_bluefin  movement_script_bluefin_2  movement_script_bluefin_3  movement_script_bluefin_3~  movement_script_bluefin~  movement_script_hydrocamel  movement_script_test~  movements~  moving_script.py  moving_script_7_force_engine.py  nohup.out  water~
src/freefloating_gazebo_demo/urdf/: KAYAK.sdf  bbox.sdf  bbox.urdf  g500ARM5.sdf
src/freefloating_gazebo_demo/vehicles/Bluefin/body/: bluefin body (Inaccurate measurements).SLDPRT
src/freefloating_gazebo_demo/vehicles/Bluefin/body/bluefin_body/meshes/: bluefin_body.STL
src/freefloating_gazebo_demo/vehicles/Bluefin/propelor/bluefin_propelor/: manifest.xml
src/freefloating_gazebo_demo/vehicles/Hydro Camel 2/Hydro_Camel_2/meshes/: Hydro_Camel_2.STL
src/freefloating_gazebo_demo/vehicles/Hydro Camel 2/Hydro_Camel_2/robots/: Hydro Camel 2 (Inaccurate measurements).SLDPRT.URDF
src/freefloating_gazebo_demo/vehicles/KAYAK12.SLDPRT/robots/: KAYAK12.SLDPRT.URDF
src/freefloating_gazebo_demo/world/: 3_bluefin_underwater.world  underwater.world  underwater_test.world
src/gazebo_dll_controller/: CMakeLists.txt  package.xml
src/gazebo_dll_controller/include/gazebo_dll_controller/: gazebo_dll_controller.h  ros_read_write.h
src/gazebo_dll_controller/msg/: command.msg
src/gazebo_dll_controller/src/: gazebo_dll_controller.cpp  ros_read_write.cpp
src/gazebo_dll_controller/xml/: plguin_format.xml
src/gazebo_worlds/: CMakeLists.txt  package.xml
src/gazebo_worlds/launch/: main_launch_file.launch  sonar_launch_file.launch
src/gazebo_worlds/models/Bluefin/: bluefin assem (Inaccurate measurements).SLDASM
src/gazebo_worlds/models/Bluefin/body/bluefin_body/: manifest.xml
src/gazebo_worlds/models/Bluefin/body/bluefin_body/robots/: bluefin body (Inaccurate measurements).SLDPRT.URDF
src/gazebo_worlds/models/Bluefin/propelor/: bluefin propelor (Inaccurate measurements) .SLDPRT
src/gazebo_worlds/models/Bluefin/propelor/bluefin_propelor/meshes/: bluefin_propelor.STL
src/gazebo_worlds/models/Bluefin/propelor/bluefin_propelor/robots/: bluefin propelor (Inaccurate measurements) .SLDPRT.URDF
src/gazebo_worlds/models/Hydro Camel 2/: Hydro Camel 2 (Inaccurate measurements).SLDPRT
src/gazebo_worlds/models/Hydro Camel 2/Hydro_Camel_2/: manifest.xml
src/gazebo_worlds/models/KAYAK12.SLDPRT/: manifest.xml
src/gazebo_worlds/models/KAYAK12.SLDPRT/meshes/: KAYAK12.SLDPRT.STL
src/gazebo_worlds/models/KAYAK12.SLDPRT/robots/: kayak_ros.sdf
src/gazebo_worlds/world/: sonar_test.world  underwater.world
src/msg_relay/: CMakeLists.txt  package.xml
src/msg_relay/src/: msg_relay.cpp
src/propeller_engine/: CMakeLists.txt  package.xml
src/propeller_engine/include/propeller_engine/: propeller_engine.h
src/propeller_engine/msg/: engine_msg.msg
src/propeller_engine/src/: propeller_engine.cpp
src/relative_force_engine/: CMakeLists.txt  package.xml
src/relative_force_engine/include/relative_force_engine/: relative_force_engine.h
src/relative_force_engine/msg/: object_params.msg
src/relative_force_engine/src/: relative_force_engine.cpp
src/ros_control_node_example/: CMakeLists.txt  package.xml
src/ros_control_node_example/src/: demo.cpp
src/seven_engines_force/: CMakeLists.txt  package.xml
src/seven_engines_force/include/seven_engines_force/: seven_engines_force.h
src/seven_engines_force/msg/: engine_forces.msg
src/seven_engines_force/src/: seven_engines_force.cpp
src/wave_simulation/: CMakeLists.txt  package.xml
src/wave_simulation/include/wave_simulation/: wave_simulation.h
src/wave_simulation/src/: wave_simulation.cpp
