<?xml version="1.0"?>
<package>
  <name>gazebo_dll_controller</name>
  <version>0.0.0</version>
  <description>The gazebo_dll_controller package.
    this package wraps c libraries that are suppose to details from the world, and publish ros topics for moving objects.
  </description>
  <maintainer email="yotamd@post.bgu.ac.il">YotamD</maintainer>

  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>seven_engines_force</build_depend>
  <build_depend>propeller_engine</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>


</package>
