<?xml version="1.0"?>
<package>
  <name>ros_control_node_example</name>
  <version>0.0.0</version>
  <description>An example for a controller that uses the gazebo_dll_controller package.</description>
  <maintainer email="yotamd@pos.bgu.ac.il">Yotam D</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_dll_controller</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>  
  <run_depend>gazebo_dll_controller</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  

  <export>
  </export>
</package>
